# warpig

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh
src/botai/: ai_cmd.c  ai_cmd.h  ai_distances.h  ai_dmgoal_mp.c  ai_dmgoal_mp.h  ai_dmnet_mp.c  ai_dmnet_mp.h  ai_dmq3.c  ai_dmq3.h  ai_func_decs.h  ai_funcs.h  ai_main.c  ai_main.h  ai_matrix.h  ai_script.c  ai_script_actions.c  ai_team.c  ai_team.h  botai.h  chars.h  inv.h  match.h  syn.h
src/cgame/: CMakeLists.txt  cg_atmospheric.c  cg_character.c  cg_commandmap.c  cg_consolecmds.c  cg_debriefing.c  cg_draw.c  cg_drawtools.c  cg_effects.c  cg_ents.c  cg_event.c  cg_fireteamoverlay.c  cg_fireteams.c  cg_flamethrower.c  cg_info.c  cg_limbopanel.c  cg_loadpanel.c  cg_local.h  cg_localents.c  cg_main.c  cg_marks.c  cg_missionbriefing.c  cg_multiview.c  cg_newDraw.c  cg_panelhandling.c  cg_particles.c  cg_players.c  cg_playerstate.c  cg_polybus.c  cg_popupmessages.c  cg_predict.c  cg_scoreboard.c  cg_servercmds.c  cg_snapshot.c  cg_sound.c  cg_spawn.c  cg_statsranksmedals.c  cg_syscalls.c  cg_trails.c  cg_view.c  (+2 more)
src/game/: CMakeLists.txt  be_aas.h  be_ai_char.h  be_ai_chat.h  be_ai_gen.h  be_ai_goal.h  be_ai_move.h  be_ai_weap.h  be_ea.h  bg_animation.c.autosave  bg_animgroup.c  bg_campaign.c  bg_character.c  bg_classes.c  bg_local.h  bg_misc.c  bg_pmove.c  bg_public.h  bg_slidemove.c  bg_sscript.c  bg_stats.c  bg_tracemap.c  botlib.h  g_active.c  g_alarm.c  g_antilag.c  g_bot.c  g_bot.c.orig  g_buddy_list.c  g_character.c  g_client.c  g_client.c.orig  g_cmds.c  g_cmds_ext.c  g_combat.c  g_config.c  g_etbot_interface.cpp  g_etbot_interface.h  g_fireteams.c  g_func_decs.h  (+36 more)
src/omnibot/Common/: BotLoadLibrary.cpp  IEngineInterface.h
src/omnibot/ET/: ET_Config.h  ET_Messages.h
src/shared/: cg_public.h  g_public.h  keycodes.h  menudef.h  menumacros.h  q_math.c  q_shared.c  q_shared.h  surfaceflags.h  tr_types.h  ui_public.h
src/ui/: CMakeLists.txt  ui_atoms.c  ui_gameinfo.c  ui_loadpanel.c  ui_local.h  ui_main.c  ui_players.c  ui_shared.c  ui_shared.h  ui_syscalls.c  ui_util.c
